--- a/Single Table/Cells/NameAndColorCell.xib
+++ b/Single Table/Cells/NameAndColorCell.xib
@@ -8,14 +8,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="l3Z-Wi-DP8">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellTableIdentifier" rowHeight="65" id="l3Z-Wi-DP8">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l3Z-Wi-DP8" id="4DY-Ya-zcJ">
-                <frame key="frameInset" width="375" height="43"/>
+                <frame key="frameInset" width="375" height="64.5"/>
                 <autoresizingMask key="autoresizingMask"/>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="233" y="-3493"/>
+            <point key="canvasLocation" x="232.5" y="-3437.5"/>
         </tableViewCell>
     </objects>
 </document>
